# astronomical-simulator-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/config/: alpha_centauri_data.py  constants.py  local_system_data.py  local_system_state_vectors.py  solar_system_data.py
src/models/: celestial_body.py  solar_system.py
src/physics/: orbital_integrator.py  physics_diagnostics.py  physics_engine.py
src/presets/: alpha_centauri.py  local_system.py  preset_creation_helpers.py
src/simulation/: scene_setup.py  simulation.py
src/tools/: fetch_jpl_local_system_vectors.py
src/ui/: body_hover_label.py  body_label.py  simulation_controls.py
